--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul id="incompleteList">
         <div class="listRow">
           <li>Todoです</li>
-          <button>完了</button>
+          <button id="completeButton">完了</button>
           <button>削除</button>
         </div>
         <div class="listRow">
@@ -27,10 +27,11 @@
     </div>
     <div class="completeArea">
       <p>完了したToDo</p>
-      <ul>
-        <div>
+      <ul id="completeList">
+        <div class="listRow">
           <li>ToDoでした</li>
           <button>戻す</button>
+          <button>削除</button>
         </div>
       </ul>
     </div>
